Font added to the project

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StackBlitz</title>
     <link rel="stylesheet" href="src/output.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1 class="text-4xl">StackBlitz</h1>
+  <body class="font-inter">
+    <h1 class="text-6xl">StackBlitz</h1>
+    <h1 class="text-4xl font-inter">StackBlitz</h1>
     <button class="btn btn-primary">Hello</button>
     <button class="btn btn-accent">Hello</button>
-    <p class="">
+    <p class="text-3xl">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat possimus,
       obcaecati fugit reprehenderit eligendi temporibus nisi similique labore
       blanditiis nam?
