navbar fully responsive

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body class="font-inter text-[16px]">
     <header data-theme="" class="dark:text-gray-300">
-      <nav class="w-[95%] mx-auto">
-        <div class="navbar bg-base-100">
+      <nav class="bg-inherit md:bg-black/30 md:backdrop-blur-lg fixed top-0 left-0 w-full h-[60px]">
+        <div class="navbar w-[95%] mx-auto">
           <div class="navbar-start">
             <div id="brand" class="flex items-center">
               <svg
@@ -59,10 +59,7 @@
                   />
                 </svg>
               </div>
-              <ul
-                tabindex="0"
-                class="responsive-menu"
-              >
+              <ul tabindex="0" class="responsive-menu">
                 <li><a href="">Bolt.New</a></li>
                 <li>
                   <a href="">WebContainers</a>
@@ -76,6 +73,12 @@
       </nav>
     </header>
     <main>
+      <h1 class="text-5xl text-primary">Hello word aknrfv vsdfn</h1>
+      <div class="w-96 h-96 mx-auto bg-purple-500"></div>
+      <h1 class="text-5xl text-primary">Hello word aknrfv vsdfn</h1>
+      <div class="w-96 h-96 mx-auto bg-purple-500"></div>
+      <h1 class="text-5xl text-primary">Hello word aknrfv vsdfn</h1>
+      <div class="w-96 h-96 mx-auto bg-purple-500"></div>
       <h1 class="text-5xl text-primary">Hello word aknrfv vsdfn</h1>
       <div class="w-96 h-96 mx-auto bg-purple-500"></div>
       <h1 class="text-5xl text-primary">Hello word aknrfv vsdfn</h1>
