webcontainers section added

--- a/index.html
+++ b/index.html
@@ -196,15 +196,22 @@
         </div>
       </section>
       <!-- Powered By Webcontainers -->
-      <section id="powered-by-webcontainers">
-        <div id="pbw-context">
+
+      <section id="powered-by-webcontainers" class="w-full h-fit bg-gray-950">
+        <div
+          id="pbw-context"
+          class="w-full mx-auto min-h-fit h-[50vh] md:h-[80vh] place-content-center backdrop-blur-xl"
+        >
           <!-- content section -->
-          <div id="content">
-            <div id="poeredby">
-              <h5>Powered by WebContainers</h5>
+          <div id="content" class="w-11/12 mx-auto space-y-12">
+            <div id="poweredby">
+              <h5 class="text-power-text">Powered by WebContainers</h5>
             </div>
-            <h1>
-              <strong>Faster</strong> and <strong>more secure</strong> <br />
+            <h1
+              class="text-3xl md:text-6xl lg:text-7xl text-white tracking-tight"
+            >
+              <strong class="text-power-text">Faster</strong> and
+              <strong class="text-power-text">more secure</strong> <br />
               than local.
             </h1>
           </div>
